# word_stat_service

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: report_router.py
app/application/: report_service.py
app/domain/: text_processor.py
app/infrastructure/: excel_exporter.py
