[project]
name = "word-stat-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Matvey Ostryakov",email = "m.ostryakov@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pymorphy3 (>=2.0.6,<3.0.0)",
    "pymorphy3-dicts-ru (>=2.4.417150.4580142,<3.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 79
[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)"
]
